// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparedDistrict unit test suite should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparedDistricts
    comparedDistricts={
        Array [
            Object {
              "location": "Adams",
              "stats": Object {
                "2004": 0.393,
              },
            },
            Object {
              "location": "Adams",
              "stats": Object {
                "2004": 0.393,
              },
            },
          ]
    }
    comparisonData={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="comparison-container"
>
        <GraphCard
                location="Adams"
                stats={
                        Object {
                                "2004": 0.393,
                              }
                }
        />
        <ComparisonCard />
        <GraphCard
                location="Adams"
                stats={
                        Object {
                                "2004": 0.393,
                              }
                }
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <GraphCard
            location="Adams"
            stats={
                        Object {
                                    "2004": 0.393,
                                  }
            }
/>,
          <ComparisonCard />,
          <GraphCard
            location="Adams"
            stats={
                        Object {
                                    "2004": 0.393,
                                  }
            }
/>,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "location": "Adams",
            "stats": Object {
              "2004": 0.393,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "location": "Adams",
            "stats": Object {
              "2004": 0.393,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="comparison-container"
>
          <GraphCard
                    location="Adams"
                    stats={
                              Object {
                                        "2004": 0.393,
                                      }
                    }
          />
          <ComparisonCard />
          <GraphCard
                    location="Adams"
                    stats={
                              Object {
                                        "2004": 0.393,
                                      }
                    }
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <GraphCard
              location="Adams"
              stats={
                            Object {
                                          "2004": 0.393,
                                        }
              }
/>,
            <ComparisonCard />,
            <GraphCard
              location="Adams"
              stats={
                            Object {
                                          "2004": 0.393,
                                        }
              }
/>,
          ],
          "className": "comparison-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "location": "Adams",
              "stats": Object {
                "2004": 0.393,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "location": "Adams",
              "stats": Object {
                "2004": 0.393,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`ComparedDistrict unit test suite should match snapshot when no props passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparedDistricts
    comparedDistricts={Array []}
    comparisonData={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="comparison-container"
>
        <ComparisonCard />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <ComparisonCard />,
          undefined,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": "div",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="comparison-container"
>
          <ComparisonCard />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <ComparisonCard />,
            undefined,
          ],
          "className": "comparison-container",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
        ],
        "type": "div",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
